# eventsapi_schema

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  defs.bzl  go.mod  package.json  pnpm-lock.yaml  update.sh
dolt/services/eventsapi/v1alpha1/: BUILD.bazel  client_event.pb.go  client_event.proto  client_event_pb.d.ts  client_event_pb.js  client_event_pb_service.d.ts  client_event_pb_service.js  event_constants.pb.go  event_constants.proto  event_constants_pb.d.ts  event_constants_pb.js  event_constants_pb_service.d.ts
tools/protoc-gen-js/: BUILD.bazel  repos.bzl
