load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:ts-protoc-gen/package_json.bzl", "bin")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load(":defs.bzl", "is_windows")

is_windows(name = "is_windows")

npm_link_all_packages(
    name = "node_modules",
)

bin.protoc_gen_ts_binary(
    name = "protoc-gen-ts",
)

filegroup(
    name = "go_srcs_files",
    srcs = [
        "//dolt/services/eventsapi/v1alpha1:eventsapi_go_proto",
    ],
    output_group = "go_generated_srcs",
)

pkg_tar(
    name = "srcs",
    srcs = [
        ":go_srcs_files",
        "//dolt/services/eventsapi/v1alpha1:eventsapi_ts_proto",
    ],
    mode = "0644",
    remap_paths = {
        "dolt/services/eventsapi/v1alpha1/eventsapi_go_proto_/github.com/dolthub/eventsapi_schema": "/",
    },
    strip_prefix = "./",
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    args = [
        "$(rlocationpath :srcs)",
    ],
    data = [
        ":srcs",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)
