module(
    name = "com_github_dolthub_eventsapi_schema",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_go", version = "0.57.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "toolchains_protoc", version = "0.5.0")
bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "org_golang_google_grpc", "org_golang_google_protobuf")
