module(
    name = "com_github_dolthub_eventsapi_schema",
)

bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "org_golang_google_grpc", "org_golang_google_protobuf")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
use_repo(node, "nodejs")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    generate_bzl_library_targets = True,
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(
    npm,
    "npm",
)

protoc_gen_js_repos_extension = use_extension("@com_github_dolthub_eventsapi_schema//tools/protoc-gen-js:repos.bzl", "protoc_gen_js_repos_extension")
use_repo(
    protoc_gen_js_repos_extension,
    "protoc_gen_js_release_linux_aarch_64",
    "protoc_gen_js_release_linux_x86_64",
    "protoc_gen_js_release_osx_aarch_64",
    "protoc_gen_js_release_osx_x86_64",
)
