package(default_visibility = ["//visibility:private"])

exports_files(["repos.bzl"])

alias(
    name = "protoc-gen-js",
    actual = select({
        ":linux_x86_64": "@protoc_gen_js_release_linux_x86_64//:protoc-gen-js",
        ":linux_arm64": "@protoc_gen_js_release_linux_aarch_64//:protoc-gen-js",
        ":macos_x86_64": "@protoc_gen_js_release_osx_x86_64//:protoc-gen-js",
        ":macos_arm64": "@protoc_gen_js_release_osx_aarch_64//:protoc-gen-js",
    }),
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)
