load("@rules_go//proto:def.bzl", "go_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "eventsapi_proto",
    srcs = glob(["*.proto"]),
    deps = [
        "@protobuf//:duration_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "eventsapi_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/dolthub/eventsapi_schema/dolt/services/eventsapi/v1alpha1",
    proto = ":eventsapi_proto",
)
